tema-80p, checkstyle good